@@ -1,23 +1,24 @@
 package com.iot.kiwicontent.service.impl;
 
+import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
+import com.baomidou.mybatisplus.core.conditions.update.LambdaUpdateWrapper;
+import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
+import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
+import com.iot.kiwicontent.mapper.CommentMapper;
 import com.iot.common.exception.ServiceException;
 import com.iot.common.result.PageResult;
 import com.iot.common.result.Result;
+import com.iot.kiwicontent.entity.CommentEntity;
 import com.iot.kiwicontent.model.dto.CommentDTO;
 import com.iot.kiwicontent.model.dto.CommentQueryDTO;
-import com.iot.kiwicontent.model.pojo.Comment;
 import com.iot.kiwicontent.model.vo.CommentVO;
-import com.iot.kiwicontent.repository.CommentRepository;
 import com.iot.kiwicontent.service.CommentService;
+import com.iot.kiwicontent.service.ArticleStatsEntityService;
+import com.iot.kiwicontent.service.CommentEntityService;
 import lombok.RequiredArgsConstructor;
-import org.bson.types.ObjectId;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Sort;
-import org.springframework.data.mongodb.core.MongoTemplate;
-import org.springframework.data.mongodb.core.query.Criteria;
-import org.springframework.data.mongodb.core.query.Query;
-import org.springframework.data.mongodb.core.query.Update;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
 import java.util.HashMap;
@@ -26,15 +27,17 @@ import java.util.Map;
 import java.util.stream.Collectors;
 
 /**
- * 评论服务实现类
+ * 评论服务实现类（MySQL 存储）
+ * 
  * @author wan
  */
+@Slf4j
 @Service
 @RequiredArgsConstructor
-public class CommentServiceImpl implements CommentService {
+public class CommentServiceImpl extends ServiceImpl<CommentMapper, CommentEntity> implements CommentService, CommentEntityService {
 
-    private final CommentRepository commentRepository;
-    private final MongoTemplate mongoTemplate;
+
+    private final ArticleStatsEntityService articleStatsEntityService;
 
     /**
      * 发表评论
@@ -43,66 +46,66 @@ public class CommentServiceImpl implements CommentService {
      * @return Result
      */
     @Override
+    @Transactional(rollbackFor = Exception.class)
     public Result<Object> publishComment(String userId, CommentDTO commentDTO) {
-        Comment comment = new Comment();
-        comment.setArticleId(commentDTO.getArticleId());
-        comment.setAuthorId(userId);
-        comment.setContent(commentDTO.getContent());
-        comment.setCreatedAt(LocalDateTime.now());
-        // 正常状态
-        comment.setStatus(0);
-        String newId = new ObjectId().toHexString();
-        comment.setId(newId);
+        LocalDateTime now = LocalDateTime.now();
+        CommentEntity comment = new CommentEntity()
+                .setArticleId(commentDTO.getArticleId())
+                .setAuthorId(userId)
+                .setContent(commentDTO.getContent())
+                .setCreatedAt(now)
+                .setStatus(0);
 
         if (commentDTO.getParentId() == null) {
-            // 一级评论
-            comment.setParentId(null);
-            comment.setRootId(newId);
+            // 一级评论：插入后设置 root_id = id
+            save(comment);
+            comment.setRootId(comment.getId());
+            updateById(comment);
         } else {
-            //即使父评论删了，子评论展示时可以显示“回复 @已删除用户”。这不算数据损坏，只是业务逻辑的边缘情况。
-            // 子评论
-            Comment parent = commentRepository.findById(commentDTO.getParentId())
-                    .orElseThrow(() -> new ServiceException("父评论不存在"));
-            
-            if (parent.getStatus() == 1) {
-                throw new ServiceException("父评论已被删除");
+            // 子评论：验证父评论是否存在且未删除
+            CommentEntity parent = getById(commentDTO.getParentId());
+            if (parent == null || parent.getStatus() == 1) {
+                throw new ServiceException("父评论不存在或已被删除");
             }
-            
-            comment.setParentId(parent.getId());
-            comment.setRootId(parent.getRootId());
+            comment.setParentId(parent.getId())
+                    .setRootId(parent.getRootId());
+            save(comment);
         }
-        commentRepository.save(comment);
 
-        // TODO: 发送MQ消息触发未读消息通知、更新文章评论计数（Redis缓存）
-        
+        // 更新文章评论计数（+1）
+        updateArticleCommentCount(commentDTO.getArticleId(), 1);
+
+        log.info("评论发表成功，commentId: {}, articleId: {}, authorId: {}", comment.getId(), comment.getArticleId(), userId);
         return Result.success();
     }
 
     /**
-     * 删除评论
+     * 删除评论（软删除）
      * @param userId 用户ID
      * @param commentId 评论ID
      * @return Result
      */
     @Override
+    @Transactional(rollbackFor = Exception.class)
     public Result<Object> deleteComment(String userId, String commentId) {
-        // 构建查询条件：ID匹配 且 作者匹配 且 尚未删除
-        Query query = new Query(Criteria.where("_id").is(commentId)
-                .and("authorId").is(userId)
-                .and("status").is(0));
+        LambdaUpdateWrapper<CommentEntity> wrapper = new LambdaUpdateWrapper<CommentEntity>()
+                .eq(CommentEntity::getId, commentId)
+                .eq(CommentEntity::getAuthorId, userId)
+                .eq(CommentEntity::getStatus, 0)
+                .set(CommentEntity::getStatus, 1);
 
-        // 设置更新操作
-        Update update = new Update().set("status", 1);
-
-        // updateFirst 是原子操作，返回更新的结果，保证状态流转的原子性
-        // 只要这一条语句执行成功，就不用担心并发问题
-        var updateResult = mongoTemplate.updateFirst(query, update, Comment.class);
-
-        if (updateResult.getModifiedCount() == 0) {
+        boolean updated = update(wrapper);
+        if (!updated) {
             return Result.fail().message("删除失败：评论不存在、已删除或无权操作");
         }
 
-        // TODO: 这里可能需要发消息去减少文章的评论计数（最终一致性）
+        // 获取评论所属文章ID，用于更新评论计数
+        CommentEntity comment = getById(commentId);
+        if (comment != null) {
+            updateArticleCommentCount(comment.getArticleId(), -1);
+        }
+
+        log.info("评论删除成功，commentId: {}, authorId: {}", commentId, userId);
         return Result.success();
     }
 
@@ -115,79 +118,71 @@ public class CommentServiceImpl implements CommentService {
      */
     @Override
     public PageResult<CommentVO> getRootComments(String articleId, Integer pageNum, Integer pageSize) {
-        // 使用 MongoTemplate 实现复杂查询：rootId = id
-        Query query = new Query();
-        query.addCriteria(Criteria.where("articleId").is(articleId)
-                .and("status").is(0)
-                .andOperator(Criteria.where("$expr").is(
-                        new org.bson.Document("$eq", java.util.Arrays.asList("$rootId", "$_id"))
-                )));
-        
-        // 计算总数
-        long total = mongoTemplate.count(query, Comment.class);
-        
-        // 分页查询
-        query.with(PageRequest.of(pageNum - 1, pageSize));
-        query.with(Sort.by(Sort.Direction.DESC, "createdAt"));
-        
-        List<Comment> rootComments = mongoTemplate.find(query, Comment.class);
-        
-        List<CommentVO> commentVos = rootComments.stream()
+        LambdaQueryWrapper<CommentEntity> wrapper = new LambdaQueryWrapper<CommentEntity>()
+                .eq(CommentEntity::getArticleId, articleId)
+                .eq(CommentEntity::getStatus, 0)
+                .apply("id = root_id")  // 一级评论：id 等于 root_id
+                .orderByDesc(CommentEntity::getCreatedAt);
+
+        Page<CommentEntity> page = new Page<>(pageNum, pageSize);
+        page(page, wrapper);
+
+        List<CommentVO> voList = page.getRecords().stream()
                 .map(this::convertToVO)
                 .collect(Collectors.toList());
 
-        long totalPages = total % pageSize == 0 ? total / pageSize : total / pageSize + 1;
-        
-        return PageResult.of(commentVos, total, pageNum, pageSize, Math.toIntExact(totalPages));
+        return PageResult.of(voList, page.getTotal(), pageNum, pageSize, (int) page.getPages());
     }
 
     /**
      * 获取楼中楼回复列表（root_id = id，parent_id != id）
      * @param queryDTO 查询条件
-     * @return PageResult<CommentVO>
+     * @return Result<Map<String, Object>>
      */
     @Override
     public Result<Map<String, Object>> getReplies(CommentQueryDTO queryDTO) {
-        List<Comment> comments;
-        long total;
+        LambdaQueryWrapper<CommentEntity> wrapper = new LambdaQueryWrapper<CommentEntity>()
+                .eq(CommentEntity::getRootId, queryDTO.getRootId())
+                .eq(CommentEntity::getStatus, 0)
+                .ne(CommentEntity::getParentId, queryDTO.getRootId()) // 排除根评论自身
+                .orderByAsc(CommentEntity::getId);
 
-        List<Comment> allComments;
-        if (queryDTO.getCursorId() == null || queryDTO.getCursorId().isEmpty()) {
-            // 第一页：查询所有符合条件的评论，然后手动分页
-            allComments = commentRepository.findByRootIdAndStatusOrderById(queryDTO.getRootId(), 0);
-            total = allComments.size();
-        } else {
-            // 游标分页：查询ID大于游标ID的评论
-            allComments = commentRepository.findByRootIdAndIdGreaterThanAndStatusOrderById(queryDTO.getRootId(), queryDTO.getCursorId(), 0);
-            total = commentRepository.countByRootId(queryDTO.getRootId());
+        if (queryDTO.getCursorId() != null && !queryDTO.getCursorId().isEmpty()) {
+            wrapper.gt(CommentEntity::getId, queryDTO.getCursorId());
         }
-        comments = allComments.stream()
-                .limit(queryDTO.getPageSize())
-                .toList();
+
+        // 查询总数
+        long total = count(wrapper);
+
+        // 分页查询
+        wrapper.last("LIMIT " + queryDTO.getPageSize());
+        List<CommentEntity> comments = list(wrapper);
 
         List<CommentVO> commentVos = comments.stream()
                 .map(this::convertToVO)
-                .toList();
-        
+                .collect(Collectors.toList());
+
         // 计算下一页的游标ID
-        String nextCursorId;
-        Map<String, Object> result = new HashMap<>();
+        String nextCursorId = null;
         if (!comments.isEmpty()) {
             nextCursorId = comments.get(comments.size() - 1).getId();
+        }
+
+        Map<String, Object> result = new HashMap<>();
+        if (nextCursorId != null) {
             result.put("nextCursorId", nextCursorId);
         }
 
         long totalPages = total % queryDTO.getPageSize() == 0 ? total / queryDTO.getPageSize() : total / queryDTO.getPageSize() + 1;
-        
-        PageResult<CommentVO> resultList = PageResult.of(commentVos, total, 1, queryDTO.getPageSize(), Math.toIntExact(totalPages));
+        PageResult<CommentVO> resultList = PageResult.of(commentVos, total, 1, queryDTO.getPageSize(), (int) totalPages);
         result.put("result", resultList);
         return Result.success(result);
     }
 
     /**
-     * 将Comment实体转换为CommentVO
+     * 将 CommentEntity 转换为 CommentVO
      */
-    private CommentVO convertToVO(Comment comment) {
+    private CommentVO convertToVO(CommentEntity comment) {
         CommentVO vo = new CommentVO();
         vo.setId(comment.getId());
         vo.setArticleId(comment.getArticleId());
@@ -197,14 +192,28 @@ public class CommentServiceImpl implements CommentService {
         vo.setRootId(comment.getRootId());
         vo.setStatus(comment.getStatus());
         vo.setCreatedAt(comment.getCreatedAt());
-        
+
         // 如果评论已删除，替换内容
         if (comment.getStatus() == 1) {
             vo.setContent("该评论已删除");
             vo.setAuthorName("已删除用户");
             vo.setAuthorAvatar("");
         }
-        
+
         return vo;
+    }
+
+    /**
+     * 更新文章评论计数
+     * @param articleId 文章ID
+     * @param delta 变化量（+1 或 -1）
+     */
+    private void updateArticleCommentCount(String articleId, int delta) {
+        try {
+            articleStatsEntityService.updateCommentCount(articleId, delta);
+        } catch (Exception e) {
+            log.error("更新文章评论计数失败，articleId: {}, delta: {}", articleId, delta, e);
+            // 不影响主流程，记录日志后继续
+        }
     }
 }
